--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,9 @@
   .custom-alert-error {
     background-color: #dc3545; /* Change this to your desired color for error alerts */
   }
-  
-
+.text-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
